# objectoriented

./: .gitignore  CMakeLists.txt  README.md  card.hpp  ub.cpp
game/: README.md  hints.txt  main.cpp  paravia copy.c  paravia.c  player.cpp  player.hpp
game/paraviac++/: CMakeLists.txt  Makefile  README.md  actions.cpp  actions.h  main.cpp  player.cpp  player.h  player.hpp  upkeep.cpp  upkeep.h
game/paraviacplusplus/: CMakeLists.txt  README.md  actions.hpp  main.cpp  player.hpp  upkeep.hpp
game/testing/: hello.txt  main.cpp
notes/: CMakeLists.txt  announce.cpp  base_class.cpp  base_class.hpp  bitcard.hpp  bitwise.txt  card.hpp  compilers.txt  concepts.hpp  enum_tuple_composition.txt  exam2.txt  final.txt  main.cpp  math.hpp  midterm.txt  notes_2_27.txt  notes_4_19.txt  notes_4_24.txt  notes_inheritance.txt  notes_templates.txt  rational.cpp  rational.hpp  shuffle.cpp  string.hpp
notes/template_stuff/: ub.hpp
practice/: CMakeLists.txt  bitcardprac.hpp  card.cpp  card.hpp  json.txt  main.cpp  rational.hpp  string.cpp  string.hpp
